Client registrations moved in application.yml

--- a/authorisation-server/src/main/resources/application.yml
+++ b/authorisation-server/src/main/resources/application.yml
@@ -6,3 +6,16 @@ spring:
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
+    
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            clientId: 70732567463-4k841le5j9gf6u6ufvldle1niaf24fcr.apps.googleusercontent.com
+            clientSecret: 1RNbuf6djaXlU05f10CVJ_aO
+            redirectUriTemplate: http://localhost
+#           apiKey: AIzaSyCDR51QOC4U_eT-lTRUcAIwkj8W1eaH0pU
+            scope:
+              - email
+              - profile
